@@ -4,17 +4,19 @@ import systems.reformcloud.reformcloud2.executor.api.common.network.channel.hand
 import systems.reformcloud.reformcloud2.executor.api.common.network.channel.handler.query.DefaultQueryNetworkHandler;
 import systems.reformcloud.reformcloud2.executor.api.common.network.packet.handler.PacketHandler;
 import systems.reformcloud.reformcloud2.executor.api.common.network.packet.query.QueryHandler;
+import systems.reformcloud.reformcloud2.executor.api.common.utility.list.Streams;
 
 import javax.annotation.Nonnull;
-import java.util.ArrayList;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Collections;
 import java.util.List;
+import java.util.concurrent.CopyOnWriteArrayList;
 
 public final class DefaultPacketHandler implements PacketHandler {
 
     private static final QueryHandler QUERY_HANDLER = new DefaultQueryHandler();
 
-    private final List<NetworkHandler> handlers = new ArrayList<>();
+    private final List<NetworkHandler> handlers = new CopyOnWriteArrayList<>();
 
     public DefaultPacketHandler() {
         this.registerHandler(new DefaultQueryNetworkHandler(QUERY_HANDLER));
@@ -28,9 +30,9 @@ public final class DefaultPacketHandler implements PacketHandler {
     @Override
     public void registerHandler(Class<? extends NetworkHandler> networkHandler) {
         try {
-            NetworkHandler handler = networkHandler.newInstance();
+            NetworkHandler handler = networkHandler.getDeclaredConstructor().newInstance();
             registerHandler(handler);
-        } catch (final InstantiationException | IllegalAccessException ex) {
+        } catch (final IllegalAccessException | NoSuchMethodException | InvocationTargetException | InstantiationException ex) {
             ex.printStackTrace();
         }
     }
@@ -49,23 +51,13 @@ public final class DefaultPacketHandler implements PacketHandler {
 
     @Override
     public void unregisterNetworkHandlers(int id) {
-        new ArrayList<>(handlers).forEach(networkHandler -> {
-            if (networkHandler.getHandlingPacketID() == id) {
-                handlers.remove(networkHandler);
-            }
-        });
+        Streams.allOf(handlers, e -> e.getHandlingPacketID() == id).forEach(handlers::remove);
     }
 
     @Nonnull
     @Override
     public List<NetworkHandler> getNetworkHandlers(int id) {
-        List<NetworkHandler> networkHandlers = new ArrayList<>();
-        handlers.forEach(networkHandler -> {
-            if (networkHandler.getHandlingPacketID() == id) {
-                networkHandlers.add(networkHandler);
-            }
-        });
-        return networkHandlers;
+        return Streams.list(handlers, e -> e.getHandlingPacketID() == id);
     }
 
     @Nonnull
